[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rubika-relay-cli"
version = "0.1.0"
description = "CLI for relaying files through Rubika Saved Messages."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rubpy",
    "pyzipper",
]

[project.scripts]
rubika-relay = "relay_cli.cli:main"

[tool.setuptools.packages.find]
include = ["relay_cli*"]
